# beoos

./: .env.example  .gitignore  README.md  SUPABASE_SETUP.md  docker-compose.yml  modules.txt  railway.json  railway.worker.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  seed.py  worker.py
backend/app/api/: analytics.py  businesses.py  crm.py  email.py  external_access.py  forms.py  google_integrations.py  integrations.py  marketing.py  mcp.py  notifications.py  operator.py  prices.py  quotes.py  reports.py  router.py  whatsapp.py
backend/app/core/: config.py  logging.py  security.py
backend/app/domain/: analytics.py  business.py  crm.py  email.py  followups.py  forms.py  marketing.py  notifications.py  operator.py  quotes.py  reports.py
backend/app/infrastructure/: database.py  models.py
backend/app/services/: alerts.py  approval_notifications.py  contact_identity.py  crypto.py  daily_report_scheduler.py  daily_reports.py  email_sync.py  follow_up_scheduler.py  gmail.py  inbox_hygiene.py  lead_qualification.py  mailbox_scheduler.py  openai_email.py  operator.py  paystack.py  policy.py  push_notifications.py  quote_ai.py  quote_engine.py  whatsapp.py  zoho_mail.py
backend/beoos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/prompts/: email_triage.md
backend/tests/: test_formsubmit_routing.py  test_policy.py  test_website_form_intake.py  test_zoho_account_matching.py
docs/: API_KEYS.md  whatsapp-coexistence-audit.md
frontend/: components.json  middleware.ts  next.config.ts  package-lock.json  (+2 more)
(+120 files in other folders)
