[project]
name = "beoos-backend"
version = "0.1.0"
description = "BeoOS production backend"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=44,<46",
  "email-validator>=2.2,<3",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openai>=2.20,<3",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "resend>=2.16,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"] # FastAPI uses Depends/Header/Query in function defaults by design.

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
